--- a/frontend/game_it/package.json
+++ b/frontend/game_it/package.json
@@ -12,6 +12,8 @@
     "@privy-io/react-auth": "^1.94.2",
     "@privy-io/wagmi": "^0.2.12",
     "@tanstack/react-query": "^5.60.5",
+    "axios": "^1.7.7",
+    "moralis": "^2.27.2",
     "next": "15.0.3",
     "privy": "^0.4.1",
     "react": "19.0.0-rc-66855b96-20241106",
