--- a/frontend/game_it/package.json
+++ b/frontend/game_it/package.json
@@ -13,14 +13,17 @@
     "@privy-io/wagmi": "^0.2.12",
     "@tanstack/react-query": "^5.60.5",
     "next": "15.0.3",
+    "phaser": "^3.87.0",
     "privy": "^0.4.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-loader": "^9.2.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
