--- a/frontend/game_it/package.json
+++ b/frontend/game_it/package.json
@@ -18,8 +18,9 @@
     "next": "15.0.3",
     "phaser": "^3.87.0",
     "privy": "^0.4.1",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "@marsidev/react-turnstile": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
